--- a/NorthWindCRUD/packages.config
+++ b/NorthWindCRUD/packages.config
@@ -7,8 +7,9 @@
   <package id="DelegateDecompiler.EntityFramework" version="0.24.0" targetFramework="net48" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net48" />
   <package id="EntityFramework.zh-Hant" version="6.2.0" targetFramework="net48" />
-  <package id="jQuery" version="3.3.1" targetFramework="net48" />
-  <package id="jQuery.Validation" version="1.17.0" targetFramework="net48" />
+  <package id="jQuery" version="3.5.1" targetFramework="net48" />
+  <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net48" />
+  <package id="jQuery.Validation" version="1.19.2" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc.zh-Hant" version="5.2.4" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net48" />
@@ -18,7 +19,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages.zh-Hant" version="3.2.4" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net48" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net48" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Mono.Reflection.Core" version="1.1.1" targetFramework="net48" />
